--- a/todo
+++ b/todo
@@ -6,16 +6,17 @@
 *. refactor API
 *. add C-CACHE, set it to choreo
 *. matmul_tensor_cores.h, line 69, fix bug, cause: non-normalised loop and symbolic index calculation
+*. matmul_tensor_cores_tuned.h, line 151, bug, still slower with <=: rationale, we need compile-time value for shape and index calculation, with constexpr maybe
 
 ======================= TODO ==============================
 
-*. matmul_tensor_cores_tuned.h, line 151, bug, still slower with <=
+*. use compile-time value for Matrix design, like nalgebra
+*. pack wmma into Matrix design
 *. make one faster kernel, not limit to. (need to pack fragment loading in Matrix design)
-*. add cp.async
 *. integrate to choreo // next week
+*. add cp.async
 *. add f4copy to <=
 *. add border check to <=, allow more, allow less, allow tail, use ldmatrix-like design
-*. use compile-time value for Matrix design, like nalgebra
 
 *. add TODO to baseline accrucy : pending, leave to latter dev
 *. handle C reuse issue : we fine, we can work now, and not become bottleneck yet.
