change strategy; impl fullflow first

--- a/todo
+++ b/todo
@@ -13,6 +13,9 @@
 
 ======================= TODO ==============================
 
+*. make all correct first, and impose user's behaviour is allowed. no need to force unified helpers
+*. integrate to choreo
+
 *. use compile-time value for Matrix design, like nalgebra | if problem comes from threadIdx.y these runtime value, try to add const value into API for (loop-extents)
 *. pack wmma into Matrix design
 *. make one faster kernel, not limit to. (need to pack fragment loading in Matrix design)
